# eis_analysis

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  eis.py  example_eis_data.csv  md2pdf.sh  oxide_permittivity.py  pyproject.toml  real_gamry_example.DTA
doc/: AUDIT_2026-04-24.md  AUDIT_2026-06-23.md  AUDIT_2026-07-02.md  AUDIT_cli_parser_2026-07-08.md  AUDIT_diffevo.md  AUDIT_fitting_diagnostics_2026-07-03.md  CIRCUIT_PARSER.md  CODE_ANALYSIS_REPORT.md  CODE_DESIGN_ANALYSIS.md  CODE_REVIEW.md  CODE_REVIEW_2026.md  CODE_REVIEW_REPORT.md  DIFFERENTIAL_EVOLUTION.md  DRT_IMPROVEMENTS.md  DRT_INTUITION.md  DRT_Implementation_Analysis-Brian.md  DRT_MATH_AUDIT_2026-06-27.md  DRT_METHOD_ANALYSIS.md  GCV_IMPLEMENTATION.md  GMM_BAYESIAN_INTUITION.md  GMM_PEAK_DETECTION.md  KK_comparison_report.md  K_ELEMENT_GUIDE.md  LEVM_CIRCUITS.md  LEVM_WEIGHTING_REPORT.md  LinKK_analysis.md  MULTISTART_OPTIMIZATION.md  NONLINEAR_FIT_ANALYSIS.md  OXIDE_ANALYSIS_GUIDE.md  PONYTAIL_AUDIT.md  PYTHON_API.md  SCIPY_NUMPY_OPTIMIZATION_REPORT.md  SKEW_NORMAL_PLAN.md  VALIDATION_METHOD_COMPARISON.md  VERSION_MANAGEMENT.md  VOIGT_CHAIN_MATH.md  WARBURG_SIMULATION.md  WEIGHTING_AND_STATISTICS.md  ZHIT_AUDIT_2026-04-26.md  ZHIT_IMPLEMENTATION_SPEC.md  (+2 more)
eis_analysis/: __init__.py  version.py
example/: EISPOT-test1.DTA  EIS_Z-120-3.dta  EIS_ZRY-3d-1.dta  example_eis_data.csv  example_eis_data_eu.csv  generate_drt_example_figure.py  generate_warburg_data.py
tests/: __init__.py  test_G_element.py  test_K_element.py  test_bounds_diagnostics.py  test_cli_integration.py  test_cli_parser.py  test_diffevo.py  (+22 more)
(+66 files in other folders)
